load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load(":local_packages_util.bzl", "link_local_packages")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("@bazel_skylib//lib:collections.bzl", "collections")

exports_files([
    "firebase.json",
    "ngsw-config.json",
    "ngsw-config.template.json",
    "tsconfig.json",
])

# If set will use first party angular deps for aio targets instead of their npm equivalent
bool_flag(
    name = "flag_aio_local_deps",
    build_setting_default = False,
)

config_setting(
    name = "aio_local_deps",
    flag_values = {
        ":flag_aio_local_deps": "true",
    },
)

# Config setting controlling the AIO architect configuration to build with
string_flag(
    name = "flag_aio_build_config",
    build_setting_default = "stable",
    values = [
        "stable",
        "rc",
        "next",
        "archive",
    ],
)

config_setting(
    name = "aio_build_config_stable",
    flag_values = {
        ":flag_aio_build_config": "stable",
    },
)

config_setting(
    name = "aio_build_config_rc",
    flag_values = {
        ":flag_aio_build_config": "rc",
    },
)

config_setting(
    name = "aio_build_config_next",
    flag_values = {
        ":flag_aio_build_config": "next",
    },
)

config_setting(
    name = "aio_build_config_archive",
    flag_values = {
        ":flag_aio_build_config": "archive",
    },
)

# All source and configuration files required to build the docs app
APPLICATION_FILES = [
    "angular.json",
    "tsconfig.app.json",
    "tsconfig.json",
    "tsconfig.worker.json",
    "security-exemptions.json",
] + glob(
    ["src/**/*"],
    exclude = [
        "src/**/*.spec.ts",
        # Temporarily exclude generated sources produced by the non-bazel
        # build until the whole project is built by bazel and this directory
        # isn't needed.
        "src/generated/**/*",
    ],
)

# Dependencies required to build the docs app.
APPLICATION_DEPS = [
    ":stackblitz",
    "@aio_npm//@angular-devkit/build-angular",
    "@aio_npm//@angular-eslint/builder",
    "@aio_npm//@angular/animations",
    "@aio_npm//@angular/cdk",
    "@aio_npm//@angular/cli",
    "@aio_npm//@angular/common",
    "@aio_npm//@angular/compiler",
    "@aio_npm//@angular/compiler-cli",
    "@aio_npm//@angular/core",
    "@aio_npm//@angular/elements",
    "@aio_npm//@angular/forms",
    "@aio_npm//@angular/material",
    "@aio_npm//@angular/platform-browser",
    "@aio_npm//@angular/platform-browser-dynamic",
    "@aio_npm//@angular/router",
    "@aio_npm//@angular/service-worker",
    "@aio_npm//@types/lunr",
    "@aio_npm//@types/trusted-types",
    "@aio_npm//lunr",
    "@aio_npm//rxjs",
    "@aio_npm//safevalues",
    "@aio_npm//tslib",
    "@aio_npm//zone.js",
]

# All sources, specs, and config files required to test the docs app
TEST_FILES = APPLICATION_FILES + [
    "karma.conf.js",
    "tsconfig.spec.json",
] + glob(
    ["src/**/*.spec.ts"],
)

# Dependencies required to test the docs app
TEST_DEPS = APPLICATION_DEPS + [
    "@aio_npm//@angular/build-tooling/bazel/browsers/chromium",
    "@aio_npm//@types/jasmine",
    "@aio_npm//@types/node",
    "@aio_npm//assert",
    "@aio_npm//jasmine",
    "@aio_npm//jasmine-core",
    "@aio_npm//karma-chrome-launcher",
    "@aio_npm//karma-coverage",
    "@aio_npm//karma-jasmine",
    "@aio_npm//karma-jasmine-html-reporter",
    "//aio/tools:windows-chromium-path",
]

# All sources, specs, and config files required to serve the app
# and run e2e tests against it
E2E_FILES = APPLICATION_FILES + glob(["tests/e2e/**"])

# Dependencies required to run the e2e tests
E2E_DEPS = APPLICATION_DEPS + [
    "@aio_npm//@angular/build-tooling/bazel/browsers/chromium",
    "@aio_npm//@types/jasmine",
    "@aio_npm//@types/node",
    "@aio_npm//jasmine-spec-reporter",
    "@aio_npm//protractor",
    "@aio_npm//ts-node",
    "//aio/tools:windows-chromium-path",
]

# Poll period for architect rules that watch for changes
ARCHITECT_POLL_MS = 1000

# Stamp npm_link targets for all dependencies that correspond to a
# first-party equivalent pacakge in angular.
link_local_packages(all_aio_deps = collections.uniq(APPLICATION_DEPS + TEST_DEPS + E2E_DEPS))

copy_to_bin(
    name = "application_files_bin",
    srcs = APPLICATION_FILES,
)
