load("@aspect_rules_ts//ts:defs.bzl", rules_js_tsconfig = "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
    "cypress.json",
])

rules_js_tsconfig(
    name = "tsconfig_build",
    src = "tsconfig.json",
)

rules_js_tsconfig(
    name = "tsconfig_test",
    src = "tsconfig-test.json",
    deps = [
        ":tsconfig_build",
    ],
)
